# docs/swagger.yaml
@@ -19,6 +19,36 @@ info:
   title: Blog API
   version: "1.0"
 paths:
+  /api/v1/pub/login/captcha:
+    get:
+      parameters:
+      - description: 验证码ID
+        in: query
+        name: captchaId
+        required: true
+        type: string
+      produces:
+      - image/png
+      responses:
+        "200":
+          description: 图形验证码
+        "400":
+          description: '{code:400,data:null,msg:无效的请求参数}'
+          schema:
+            type: string
+      summary: 响应图形验证码
+      tags:
+      - 登录管理
+  /api/v1/pub/login/captchaid:
+    get:
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: 获取验证码信息
+      tags:
+      - 登录管理
   /api/v1/tags:
     post:
       parameters:
